k8s-problem-6/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hello-test-playground.sap.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-service
              servicePort: 5678
